2018-09-20  Mingli Yu  <Mingli.Yu@windriver.com>

	* sysdeps/unix/sysv/linux/gethostid.c (gethostid): Check for NULL
	value from gethostbyname_r.

2018-09-19  Carlos O'Donell  <carlos@redhat.com>

	* stdlib/tst-setcontext9.c (f1): Rename to...
	(f1a): ... this.
	(f1b): New function implementing lower half of f1 in alternate stack.

2018-09-19  Paul Eggert  <eggert@cs.ucla.edu>

	Fix mktime localtime offset confusion
	[BZ #23603]
	* include/time.h (__mktime_internal): The localtime offset is now
	of type long int instead of time_t.  This is the longstanding type
	in glibc, and it is more than enough to represent difference
	between localtime and gmtime even if it is 32 bits and time_t is
	64.  Changing it now will let us avoid an unnecessary change when
	time_t is widened to 64 bits on 32-bit platforms.
	* time/mktime-internal.h (mktime_offset_t): Now long int.

	Merge mktime, timegm from upstream Gnulib
	[BZ #23603][BZ #16346]
	This fixes some obscure problems with integer overflow.
	Although it looks scary, it is almost all a byte-for-byte copy
	from Gnulib, and the Gnulib code has been tested reasonably well.
	* include/intprops.h: New file, copied from Gnulib.
	* include/verify.h, time/mktime-internal.h:
	New tiny files, simplified from Gnulib.
	* time/mktime.c: Copy from Gnulib.  This has the following changes:
	Do not include config.h if DEBUG_MKTIME is nonzero.
	Include stdbool.h, intprops.h, verify.h.
	Include string.h only if needed.
	Include stdlib.h on MS-Windows.
	Include mktime-internal.h.
	(DEBUG_MKTIME): Default to 0, and simplify later uses.
	(NEED_MKTIME_INTERNAL, NEED_MKTIME_WINDOWS)
	(NEED_MKTIME_WORKING): Give default values to pacify -Wundef,
	which glibc uses.  Default NEED_MKTIME_WORKING to DEBUG_MKTIME, to
	simplify later conditionals; default the others to zero.  Use
	these conditionals to express only the code needed on the current
	platform.  In uses of these conditionals, explicitly spell out how